# tulkki

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SESSION_HANDOVER.md  pyproject.toml
.github/workflows/: install-smoke-test.yml  tests.yml
docs/: index.html
docs/examples/: anthropic-economic-index.html  mistral-small-4.html
src/tulkki/: __init__.py  cli.py  descriptions.py  diff.py  extractor.py  protocols.py  raw_presence.py  report.py  types.py
src/tulkki/backends/: __init__.py  httpx_raw.py  playwright_render.py
tests/: test_cli.py  test_diff.py  test_extractor.py  test_raw_presence.py
tests/fixtures/: csr_spa.html  nextjs_rsc_sample.html  plain_article.html
