[project]
name = "tulkki"
version = "0.1.0"
description = "AI crawler visibility diagnostic tool for web pages"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "tulkki contributors" }]
keywords = ["llm", "ai", "seo", "geo", "scraper", "markdown", "diagnostic"]
dependencies = [
    "httpx>=0.27",
    "playwright>=1.45",
    "trafilatura>=2.0",
    "markdownify>=0.13",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
hrequests = ["hrequests>=0.9"]
patchright = ["patchright>=1.40"]
crawl4ai = ["crawl4ai>=0.5"]
firecrawl = ["firecrawl-py>=2.0"]
all = [
    "hrequests>=0.9",
    "patchright>=1.40",
    "crawl4ai>=0.5",
    "firecrawl-py>=2.0",
]

[project.scripts]
tulkki = "tulkki.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
